engine-net-2/examples/Errors/FunctionMethodParametersInTypeMismatch.grs
new graph "Rules.grg"

exec { n:N=null; d:double=n.f("42") }

quit
